--- a/test2/index.html
+++ b/test2/index.html
@@ -9,39 +9,43 @@
 <body>
 	<div class="wrapper">
 
-<div class="greeting0"><h1>LainSafe </h1> </div>
+<!--<div class="greeting0"><h1>LainSafe </h1> </div>-->
 
 
-<div class="upload-console">
-<h2 class="upload-console-header">Upload</h2>
+<div class="upload-console" >
+<h2 class="upload-console-header">LainSafe</h2>
 <div>
-	<h3>Select files from your computer</h3>
-	<form action="upload.php" method="post" enctype="multipart/form-data">
-		<input type="file" name="files[]" id="standard-upload-files" multiple>
-		<input type="submit" value="Upload files" id="standard-upload">
-	</form>
-
-<div style="float: left; width:1%;">
-	<img src="logo.png">
-</div>
-
-<div style="float: right; width:60%;">
-</br></br></br>
-	<h3>Drag and drop files below</h3>
-	<div class="upload-console-drop" id="drop-zone">
-		Just drag and drop files here
+	
+	<div style="float: left; width:25%;">
+		<img src="logo.png">
 	</div>
-
-	<div class="bar">
-		<div class="bar-fill" id="bar-fill">
-			<div class="bar-fill-text" id="bar-fill-text">
+	
+	<div style="float: right; width:60%;">
+	</br></br></br>
+		<h3>Drag and drop files below</h3>
+		<div class="upload-console-drop" id="drop-zone">
+			<img src="files.svg" style="width:80px;">
+		</div>
+	
+		<div class="bar">
+			<div class="bar-fill" id="bar-fill">
+				<div class="bar-fill-text" id="bar-fill-text">
+				</div>
 			</div>
 		</div>
-	</div>
-	<div id="uploads-finished" class="hidden">
-		<h3>Processed files</h3>
-	</div>
-	</div>
+		<div id="uploads-finished" class="hidden">
+			<h3>Processed files</h3>
+		</div>
+		</div>
+		
+	<form action="upload.php" method="post" enctype="multipart/form-data">
+	</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+		<h3>Select files from your computer</h3>
+		<input type="file" name="files[]" id="standard-upload-files" multiple>
+		<input class="fileupload" type="submit" value="Upload files" id="standard-upload">
+	</form>
+
+
 			</div>
 		</div>
 	</div>
