--- a/test2/index.html
+++ b/test2/index.html
@@ -24,7 +24,7 @@
 	</br></br></br>
 		<h3>Drag and drop files below</h3>
 		<div class="upload-console-drop" id="drop-zone">
-			<img src="files.svg" style="width:80px;">
+			<img src="files.svg" style="width:80px; margin-top: 10px;">
 		</div>
 	
 		<div class="bar">
