--- a/test2/index.html
+++ b/test2/index.html
@@ -40,7 +40,7 @@
 	</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
 	<form action="upload.php" method="post" enctype="multipart/form-data">
 		<h3>Select files from your computer</h3>
-		<div style="float: right; width:60%;">
+		<div style="float: left; width:40%;">
 			<input type="file" name="files[]" id="standard-upload-files" multiple>
 		</div>
 		<div style="float: left; width:40%;"></div>
